# rust-orderbook-aggregator

./: Cargo.toml  README.md  build.rs
orderbook-merger/: Cargo.toml  build.rs
orderbook-merger/proto/: orderbook_summary.proto
orderbook-merger/src/: client.rs  lib.rs  server.rs  setting.toml
orderbook-merger/src/exchange/: binance.rs  bitstamp.rs  exchange.rs
orderbook-merger/src/exchanges/: binance.rs  bitstamp.rs  exchange.rs
orderbook-merger/src/orderbook/: orderbook.rs
proto/: orderbook.rs  orderbooksummary.proto
src/: client.rs  lib.rs  server.rs  setting.toml
src/exchange/: binance.rs  bitstamp.rs  exchange.rs  exchange_base.rs  mod.rs
src/orderbook/: book.rs  mod.rs  orderbook.rs
terminal-ui/: Cargo.toml  README.md
terminal-ui/src/: events.rs  key.rs  lib.rs  main.rs  ui.rs
terminal-ui/src/app/: actions.rs  mod.rs  state.rs  ui.rs
terminal-ui/src/inputs/: events.rs  key.rs  mod.rs
terminal-ui/src/io/: handler.rs  mod.rs
