[package]
name = "rust-orderbook-merger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the gRPC server
name = "server"
path = "src/server.rs"

[[bin]] # Bin to run the gRPC client
name = "client"
path = "src/client.rs"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
rust_decimal = { version = "1.32.0", features = ["maths", "default"] }
rust_decimal_macros = "1.32.0"
futures = { version = "0.3.28" }
tokio = { version = "1.31.0", features = ["full"] }
config = { version = "0.13.3", features = ["toml"] }
tonic = { version = "0.9.2" }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tokio-tungstenite = { version = "0.20.0", features = ["native-tls"] }
prost = "0.11.9"
serde_json = "1.0.105"
serde = { version = "1.0.185", features = ["derive"] }
reqwest = { version = "0.11.19", features = ["json"] }
url = "2.4.0"

[build-dependencies]
tonic-build = { version = "0.9.2" }
