[workspace]

members = [
    "orderbook-merger",
    "terminal-ui",
]

[workspace.dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
config = { version = "0.13.3", features = ["toml"] }
futures = { version = "0.3.28" }
rust_decimal = { version = "1.32.0", features = ["maths", "default"] }
rust_decimal_macros = "1.32.0"
prost = "0.11.9"
reqwest = { version = "0.11.19", features = ["json"] }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
serde-aux = "4.2.0"
tokio = { version = "1.31.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tokio-tungstenite = { version = "0.20.0", features = ["native-tls"] }
tonic = { version = "0.9.2" }
url = "2.4.0"
tonic-build = { version = "0.9.2" }