[package]
name = "terminal-ui"
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0.26.1"
orderbook-merger = {path = "../orderbook-merger" }
ratatui = { version = "0.22.0", features = ["all-widgets"]}
tokio = { workspace = true }
tonic = { workspace = true }
tokio-stream = { workspace = true }
anyhow = { workspace = true }
